--- a/index2.html
+++ b/index2.html
@@ -23,5 +23,6 @@
     <script src="./app2/app2.js"></script>
     <script src="./app2/controllers/charactersCtrl.js"></script>
     <script src="./app2/controllers/characterCtrl.js"></script>
+    <script src="./app2/services/characterSvc.js"></script>
 </body>
 </html>
